--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="slider">
                 <img src="sdwk-logo-4.png" alt="Immagine Placeholder 4">
                 <img src="sidewalk-2.gif" alt="Immagine Placeholder 5">
-                <img src="https://via.placeholder.com/1080x600?text=Placeholder+Image+6" alt="Immagine Placeholder 6">
+              
             </div>
         </div>
         <div class="divider"></div>
@@ -201,7 +201,7 @@
         <!-- SLIDER 4  -->
     <section class="section">
         <div class="three-columns">
-            <div> Amaro Màrlus </div>
+            <div> Officine Vica </div>
             <div> 
                 Revamped branding for an emerging amaro producer in the Turin area. 
                 A classic touch with colors reflecting the spirit of the drink, and a typeface inspired by vintage local bottles. </div>
@@ -209,10 +209,10 @@
         </div>
         <div class="image-text-container">
             <div class="slider">
-                <img src="marlus-1.png" alt="Immagine Placeholder 1">
-                <img src="marlus-3.png" alt="Immagine Placeholder 2">
-                <img src="marlus-4.jpeg" alt="Immagine Placeholder 3">
-                 <img src="Marlus-2.jpeg" alt="Immagine Placeholder 3">
+                <img src="ovica-1.png" alt="Immagine Placeholder 1">
+                <img src="ovica-2.png" alt="Immagine Placeholder 2">
+                <img src="ovica-3.avif" alt="Immagine Placeholder 3">
+               
             </div>
         </div>
         <div class="divider"></div>
