--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
         <div class="three-columns">
             <div> Officine Vica </div>
             <div> 
-                Revamped branding for an emerging amaro producer in the Turin area. 
-                A classic touch with colors reflecting the spirit of the drink, and a typeface inspired by vintage local bottles. </div>
+                Design for the presentation app and event stand for a Turin-based brand specializing in tractors and agricultural machinery. 
+                The project included creating an engaging user interface and a visually impactful space for large-scale technology events. </div>
             <div> 2023 </div>
         </div>
         <div class="image-text-container">
