--- a/index.html
+++ b/index.html
@@ -229,18 +229,20 @@
     <!-- SLIDER 5  -->
     <section class="section">
         <div class="three-columns">
-            <div> Amaro Màrlus </div>
+            <div> Banality Wear </div>
             <div> 
                 Revamped branding for an emerging amaro producer in the Turin area. 
                 A classic touch with colors reflecting the spirit of the drink, and a typeface inspired by vintage local bottles. </div>
-            <div> 2023 </div>
+            <div> 2018 </div>
         </div>
         <div class="image-text-container">
             <div class="slider">
-                <img src="marlus-1.png" alt="Immagine Placeholder 1">
-                <img src="marlus-3.png" alt="Immagine Placeholder 2">
-                <img src="marlus-4.jpeg" alt="Immagine Placeholder 3">
-                 <img src="Marlus-2.jpeg" alt="Immagine Placeholder 3">
+                <img src="bnt-1.png" alt="Immagine Placeholder 1">
+                <img src="bnt-2.gif" alt="Immagine Placeholder 2">
+                <img src="bnt-3.png" alt="Immagine Placeholder 3">
+                 <img src="bnt-4.png" alt="Immagine Placeholder 3">
+                 <img src="bnt-5.png" alt="Immagine Placeholder 3">
+                 <img src="bnt-6.png" alt="Immagine Placeholder 3">
             </div>
         </div>
         <div class="divider"></div>
