--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
         <div class="three-columns">
             <div> Banality Wear </div>
             <div> 
-                Revamped branding for an emerging amaro producer in the Turin area. 
-                A classic touch with colors reflecting the spirit of the drink, and a typeface inspired by vintage local bottles. </div>
+               Personal clothing brand focused on celebrating the uniqueness in everyday people.
+
             <div> 2018 </div>
         </div>
         <div class="image-text-container">
