--- a/index.html
+++ b/index.html
@@ -253,18 +253,19 @@
         <!-- SLIDER 6  -->
     <section class="section">
         <div class="three-columns">
-            <div> Amaro Màrlus </div>
+            <div> Ford </div>
             <div> 
-                Revamped branding for an emerging amaro producer in the Turin area. 
-                A classic touch with colors reflecting the spirit of the drink, and a typeface inspired by vintage local bottles. </div>
+                Ad page design for Ford’s new hybrid machines, featuring instructional content. </div>
             <div> 2023 </div>
         </div>
         <div class="image-text-container">
             <div class="slider">
-                <img src="marlus-1.png" alt="Immagine Placeholder 1">
-                <img src="marlus-3.png" alt="Immagine Placeholder 2">
-                <img src="marlus-4.jpeg" alt="Immagine Placeholder 3">
-                 <img src="Marlus-2.jpeg" alt="Immagine Placeholder 3">
+                <img src="ford-1.png" alt="Immagine Placeholder 1">
+                <img src="ford-2.gif" alt="Immagine Placeholder 1">
+                <img src="ford-3.png" alt="Immagine Placeholder 1">
+                <img src="ford-4.png" alt="Immagine Placeholder 1">
+                <img src="ford-5.png" alt="Immagine Placeholder 1">
+             
             </div>
         </div>
         <div class="divider"></div>
