--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="three-columns">
             <div> Ford </div>
             <div> 
-                Ad page design for Ford’s new hybrid machines, featuring instructional content. </div>
+                Ad page design and copywriting for Ford’s new hybrid machines, featuring instructional content. </div>
             <div> 2023 </div>
         </div>
         <div class="image-text-container">
@@ -278,18 +278,18 @@
         <!-- SLIDER 7  -->
     <section class="section">
         <div class="three-columns">
-            <div> Amaro Màrlus </div>
+            <div> AVIO </div>
             <div> 
-                Revamped branding for an emerging amaro producer in the Turin area. 
-                A classic touch with colors reflecting the spirit of the drink, and a typeface inspired by vintage local bottles. </div>
-            <div> 2023 </div>
+            General graphic design for a website, including microcopy and text editing. Collaborated closely with top 3D designers and aerospace experts from the Turin area. </div>
+            <div> 2022 </div>
         </div>
         <div class="image-text-container">
             <div class="slider">
-                <img src="marlus-1.png" alt="Immagine Placeholder 1">
-                <img src="marlus-3.png" alt="Immagine Placeholder 2">
-                <img src="marlus-4.jpeg" alt="Immagine Placeholder 3">
-                 <img src="Marlus-2.jpeg" alt="Immagine Placeholder 3">
+                <img src="avio-1.png" alt="Immagine Placeholder 1">
+                <img src="avio-2.png" alt="Immagine Placeholder 2">
+                <img src="avio-3.png" alt="Immagine Placeholder 3">
+                 <img src="avio-4.png" alt="Immagine Placeholder 3">
+                      <img src="avio-5.png" alt="Immagine Placeholder 3">
             </div>
         </div>
         <div class="divider"></div>
