--- a/index.html
+++ b/index.html
@@ -303,16 +303,24 @@
         <div class="three-columns">
             <div> Amaro Màrlus </div>
             <div> 
-                Revamped branding for an emerging amaro producer in the Turin area. 
-                A classic touch with colors reflecting the spirit of the drink, and a typeface inspired by vintage local bottles. </div>
-            <div> 2023 </div>
+               The search for my creative identity has also led me to illustration. 
+                A raw, simple, and spontaneous style that taught me the values I bring to my work. </div>
+            <div> 2028-2022 </div>
         </div>
         <div class="image-text-container">
             <div class="slider">
-                <img src="marlus-1.png" alt="Immagine Placeholder 1">
-                <img src="marlus-3.png" alt="Immagine Placeholder 2">
-                <img src="marlus-4.jpeg" alt="Immagine Placeholder 3">
-                 <img src="Marlus-2.jpeg" alt="Immagine Placeholder 3">
+                <img src="gir1.png" alt="Immagine Placeholder 1">
+<img src="gir2.png" alt="Immagine Placeholder 2">
+<img src="gir3.png" alt="Immagine Placeholder 3">
+<img src="gir4.png" alt="Immagine Placeholder 4">
+<img src="gir5.png" alt="Immagine Placeholder 5">
+<img src="gir6.png" alt="Immagine Placeholder 6">
+<img src="gir7.png" alt="Immagine Placeholder 7">
+<img src="gir8.png" alt="Immagine Placeholder 8">
+<img src="gir9.png" alt="Immagine Placeholder 9">
+<img src="gir10.png" alt="Immagine Placeholder 10">
+<img src="gir11.png" alt="Immagine Placeholder 11">
+
             </div>
         </div>
         
