--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <div class="three-columns">
             <div> AVIO </div>
             <div> 
-            General graphic design for a website, including microcopy and text editing. Collaborated closely with top 3D designers and aerospace experts from the Turin area. </div>
+            General graphic design, including microcopy and text editing. Collaborated closely with top 3D designers and aerospace experts from the Turin area. </div>
             <div> 2022 </div>
         </div>
         <div class="image-text-container">
