--- a/index.html
+++ b/index.html
@@ -303,8 +303,9 @@
         <div class="three-columns">
             <div> Amaro Màrlus </div>
             <div> 
-               The search for my creative identity has also led me to illustration. 
-                A raw, simple, and spontaneous style that taught me the values I bring to my work. </div>
+               The search for my creative identity led me to illustration, where I embraced a raw, simple, and spontaneous style. 
+                Collaborating with Milanese photographer Emanuele Ferrari, who’s worked with Vogue and Elle, also allowed me to dive 
+                deeper into the emotions and nuances that shape the creative process. </div>
             <div> 2028-2022 </div>
         </div>
         <div class="image-text-container">
