--- a/index.html
+++ b/index.html
@@ -301,12 +301,12 @@
     <!-- SLIDER 8  -->
     <section class="section">
         <div class="three-columns">
-            <div> Amaro Màrlus </div>
+            <div> Illustration and Emanuele Ferrari </div>
             <div> 
                The search for my creative identity led me to illustration, where I embraced a raw, simple, and spontaneous style. 
                 Collaborating with Milanese photographer Emanuele Ferrari, who’s worked with Vogue and Elle, also allowed me to dive 
                 deeper into the emotions and nuances that shape the creative process. </div>
-            <div> 2028-2022 </div>
+            <div> 2020-2022 </div>
         </div>
         <div class="image-text-container">
             <div class="slider">
