--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             <div class="slider">
 
                 
-          <img src="misc1.png" alt="Immagine Placeholder 1">
+          <img src="misc1.jpeg" alt="Immagine Placeholder 1">
 <img src="misc2.jpeg" alt="Immagine Placeholder 2">
 <img src="misc3.jpeg" alt="Immagine Placeholder 3">
 <img src="misc4.jpeg" alt="Immagine Placeholder 4">
