--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
 
       <link rel="icon" href="girstefav.png" type="image/png"> 
 
-      
+   
+    <!-- Meta tag Open Graph per Facebook e altre piattaforme -->
+    <meta property="og:title" content="Stefano Girard - Creative Designer Based in Turin">
+    <meta property="og:description" content="Portfolio showcase of Stefano Girard, creative designer based in Turin.">
+    <meta property="og:image" content="https://girste.com/path/to/girstesnippet.png">
+    <meta property="og:url" content="https://girste.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Stefano Girard">
+
+    <!-- Meta tag Twitter Card per Twitter -->
+    <meta name="twitter:title" content="Stefano Girard - Creative Designer Based in Turin">
+    <meta name="twitter:description" content="Portfolio showcase of Stefano Girard, creative designer based in Turin.">
+    <meta name="twitter:image" content="https://girste.com/path/to/girstesnippet.png">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Meta tag per Telegram -->
+    <meta name="telegram:title" content="Stefano Girard - Creative Designer Based in Turin">
+    <meta name="telegram:description" content="Portfolio showcase of Stefano Girard, creative designer based in Turin.">
+    <meta name="telegram:image" content="https://girste.com/path/to/girstesnippet.png">
+
+    <!-- Meta tag per WhatsApp -->
+    <meta property="og:title" content="Stefano Girard - Creative Designer Based in Turin">
+    <meta property="og:description" content="Portfolio showcase of Stefano Girard, creative designer based in Turin.">
+    <meta property="og:image" content="https://girste.com/path/to/girstesnippet.png">
+    <meta property="og:url" content="https://girste.com/">
+
+
       
       <style>
          * {
