--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Meta tag Open Graph per Facebook e altre piattaforme -->
     <meta property="og:title" content="Stefano Girard - Creative Designer Based in Turin">
     <meta property="og:description" content="Check out my portfolio to see what I can do for you.">
-    <meta property="og:image" content="https://https://girste.com/girstesnippet.png"> 
+    <meta property="og:image" content="https://girste.com/girstesnippet.png"> 
     <meta property="og:url" content="https://girste.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Stefano Girard">
