--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
          font-family: 'Helvetica', sans-serif;
          color: #333;
          background-color: #fff;
-         line-height: 8;
+         line-height: 1.8;
+            font-size: 1rem;
          }
          .section {
          margin-bottom: 0;
