--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          color: #333;
          background-color: #fff;
          line-height: 1.8;
-            font-size: 5rem;
+            font-size: 5rem !important;
          }
          .section {
          margin-bottom: 0;
