--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
       
       <style>
+
+         html {
+            font-size: 22px; /* Imposta la dimensione di base del font */
+         
          * {
          margin: 0;
          padding: 0;
