--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
          html {
             font-size: 16px; /* Imposta la dimensione di base del font */
+            overflow: hidden;
          
          * {
          margin: 0;
