--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <section class="section">
          <div class="three-columns">
             <div> Stefano Girard </div>
-            <div> <a href="mailto:me@girste.com.com"> me@girste.com </a></div>
+            <div> <a href="mailto:me@girste.com"> me@girste.com </a></div>
             <div> I'm a designer from Italy, living in the mountains near Turin. My journey began at age 6 with playful collages in MS Word, where Clippy 
                once asked what I'd like to do, and I answered, "this, for life." I’ve been hooked ever since. I craft visual identities for brands, 
                driven by creativity and fresh ideas. Alongside design, I’m passionate about <a href="https://buymeacoffee.com/girste">writing</a>
