--- a/index.html
+++ b/index.html
@@ -188,9 +188,10 @@
             <div> 2024 </div>
          </div>
          <div class="image-text-container">
-            <div class="slider">
+            <div class="slider"> 
                <img src="sdwk-logo-4.png" alt="Immagine Placeholder 4">
                <img src="sidewalk-2.gif" alt="Immagine Placeholder 5">
+               <img src="sidewalk-3.png" alt="Immagine Placeholder 5">
             </div>
          </div>
          <div class="divider"></div>
