--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                Copywriting and design for an ad page of a luxury watch brand based on the island of Elba, Italy. 
                I focused on clear messaging and elegant design to reflect the brand’s style. 
             </div>
-            <div> 2021 </div>
+            <div> 2021 - Team: Nello Russo, Claudio Giacosa</div>
          </div>
          <div class="image-text-container">
             <div class="slider">
@@ -225,7 +225,7 @@
                Design for the presentation app and event stand for a Turin-based brand specializing in tractors and agricultural machinery. 
                The project included creating an engaging user interface and a visually impactful space for large-scale technology events. 
             </div>
-            <div> 2023 </div>
+            <div> 2023 - Team: Nello Russo, Claudio Giacosa, Andrea Giorcelli</div>
          </div>
          <div class="image-text-container">
             <div class="slider">
@@ -264,7 +264,7 @@
             <div> 
                Ad page design and copywriting for Ford’s new hybrid machines, featuring instructional content. 
             </div>
-            <div> 2023 </div>
+            <div> 2023 - Team: Nello Russo</div>
          </div>
          <div class="image-text-container">
             <div class="slider">
@@ -284,7 +284,7 @@
             <div> 
                General graphic design, including microcopy and text editing. Collaborated closely with top 3D designers and aerospace experts from the Turin area. 
             </div>
-            <div> 2022 </div>
+            <div> 2022 - Team: Nello Russo, Claudio Giacosa, Andrea Giorcelli</div>
          </div>
          <div class="image-text-container">
             <div class="slider">
