--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
          <div class="three-columns">
             <div> Banality Wear </div>
             <div> 
-               Personal clothing brand focused on celebrating the uniqueness in everyday people. 
+               Personal clothing brand focused on celebrating the uniqueness in everyday people. Full solo project.
             </div>
             <div> 2018 </div>
          </div>
