--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
          </div>
          <div class="image-text-container">
             <div class="slider">
+               <img src="ovica-11.png" alt="Immagine Placeholder 1">
                <img src="ovica-1.png" alt="Immagine Placeholder 1">
                <img src="ovica-2.png" alt="Immagine Placeholder 2">
                <img src="ovica-3.avif" alt="Immagine Placeholder 3">
@@ -252,7 +253,7 @@
          </div>
          <div class="image-text-container">
             <div class="slider">
-                 <img src="avio-11.png" alt="Immagine Placeholder 1">
+                 <img src="avio-12.png" alt="Immagine Placeholder 1">
                <img src="avio-1.png" alt="Immagine Placeholder 1">
                <img src="avio-2.png" alt="Immagine Placeholder 2">
                <img src="avio-3.png" alt="Immagine Placeholder 3">
