--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
          </div>
          <div class="image-text-container">
             <div class="slider">
-               <img src="ovica-11.png" alt="Immagine Placeholder 1">
+               <img src="vica-23.png" alt="Immagine Placeholder 1">
                <img src="ovica-1.png" alt="Immagine Placeholder 1">
                <img src="ovica-2.png" alt="Immagine Placeholder 2">
                <img src="ovica-3.avif" alt="Immagine Placeholder 3">
@@ -276,9 +276,11 @@
          </div>
          <div class="image-text-container">
             <div class="slider">
+               <img src="ford-a.png" alt="Immagine Placeholder 1">
+               <img src="ford-2.gif" alt="Immagine Placeholder 1">
                <img src="ford-3.png" alt="Immagine Placeholder 1">
                
-               <img src="ford-2.gif" alt="Immagine Placeholder 1">
+             
                <img src="ford11.png" alt="Immagine Placeholder 1">
                <img src="ford-4.png" alt="Immagine Placeholder 1">
                <img src="ford-5.png" alt="Immagine Placeholder 1">
