--- a/index.html
+++ b/index.html
@@ -314,6 +314,11 @@
                <img src="misc9.png" alt="Immagine Placeholder 3">
                <img src="nanagif.gif" alt="Immagine Placeholder 3">
                <img src="misc4.png" alt="Immagine Placeholder 3">
+                <img src="innov1.png" alt="Immagine Placeholder 3">
+                <img src="innov2.png" alt="Immagine Placeholder 3">
+
+
+               
                      <img src="misc20.gif" alt="Immagine Placeholder 5">
                      <img src="lago-1.png" alt="Immagine Placeholder 5">
 
