--- a/index.html
+++ b/index.html
@@ -314,6 +314,12 @@
                <img src="misc9.png" alt="Immagine Placeholder 3">
                <img src="nanagif.gif" alt="Immagine Placeholder 3">
                <img src="misc4.png" alt="Immagine Placeholder 3">
+
+               <img src="ABB-11.png" alt="Immagine Placeholder 3">
+               <img src="ITAS-23.png" alt="Immagine Placeholder 3">
+
+
+               
                 <img src="innov1.png" alt="Immagine Placeholder 3">
                 <img src="innov2.png" alt="Immagine Placeholder 3">
 
