--- a/index.html
+++ b/index.html
@@ -383,6 +383,9 @@
                <img src="gir4.png" alt="Immagine Placeholder 4">
                <img src="gir2.png" alt="Immagine Placeholder 2">
                <img src="gir9.png" alt="Immagine Placeholder 9">
+               <img src="Group 1233.png" alt="Immagine Placeholder 9">
+
+               
                <img src="gir6.png" alt="Immagine Placeholder 6">
                
                <img src="gir3.png" alt="Immagine Placeholder 3">
