--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:site_name" content="Stefano Girard">
 
     <!-- Meta tag Twitter Card per Twitter -->
-    <meta name="twitter:title" content="Stefano Girard - Creative Designer Based in Turin">
+    <meta name="twitter:title" content="Stefano Girard - Creative Designer based in Turin">
     <meta name="twitter:description" content="Check out my portfolio to see what I can do for you.">
     <meta name="twitter:image" content="https://girste.com/girstesnippet.png">
     <meta name="twitter:card" content="summary_large_image">
