--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
          <div class="three-columns">
             <div> Stefano Girard </div>
             <div> <a href="mailto:me@girste.com"> me@girste.com </a></div>
-            <div> I'm a designer from Italy, living in the mountains near Turin. My journey began at age 6 with playful collages in MS Word, where Clippy 
+            <div> I'm a designer from Italy, living in the mountains near Turin. My journey began at age 6 with playful collages in MS Word. Clippy 
                once asked what I'd like to do, and I answered, "this, for life." I’ve been hooked ever since. I craft visual identities for brands, 
-               driven by creativity and fresh ideas. Alongside design, I’m passionate about <a href="https://buymeacoffee.com/girste">writing</a>
+               driven by creativity and ideas. Alongside design, I’m passionate about <a href="https://buymeacoffee.com/girste">writing</a>
                and often take on copywriting projects. 
                I love collaborating with clients, sharing the process to help them achieve their vision. With agency experience behind me, I now work 
                independently and dive into personal projects with fellow creatives. Feel free to reach out for work, collaborations, or just to say hi! ♥ 
