--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div> <a href="mailto:me@girste.com"> me@girste.com </a></div>
             <div> I'm a designer from Italy, living in the mountains near Turin. My journey began at age 6 with playful collages in MS Word. Clippy 
                once asked what I'd like to do, and I answered, "this, for life." I’ve been hooked ever since. I craft visual identities for brands, 
-               driven by creativity and ideas. Alongside design, I’m passionate about <a href="https://buymeacoffee.com/girste">writing</a>
+               driven by creativity and ideas. Alongside design, I’m passionate about <a href="https://buymeacoffee.com/girste/posts">writing</a>
                and often take on copywriting projects. 
                I love collaborating with clients, sharing the process to help them achieve their vision. With agency experience behind me, I now work 
                independently and dive into personal projects with fellow creatives. Feel free to reach out for work, collaborations, or just to say hi! ♥ 
@@ -429,12 +429,10 @@
       <!-- FOOT  -->
       <section class="section">
          <div class="three-columns">
-            <div>  This site is handcrafted with classic HTML and ensures complete privacy. 
-               It does not collect data, use cookies, track activity, or monitor users, even anonymously.
-               All code is fully transparent and accessible. © S. Girard, 2024 
+            <div> © S. Girard, 2024 
             </div>
-            <div></div>
-            <div> <a href=" https://girste.notion.site/Stefano-Girard-c49106a262614f7493d9bfa3579bca49"> arkive </a></div>
+            <div> <a href=" https://girste.notion.site/Stefano-Girard-c49106a262614f7493d9bfa3579bca49"> arkive </a> </div>
+            <div> </div>
          </div>
       </section>
       <script>
