--- a/index.html
+++ b/index.html
@@ -435,6 +435,9 @@
             <div> </div>
          </div>
       </section>
+
+       <div> </div>
+      
       <script>
          document.addEventListener('DOMContentLoaded', () => {
              const sliders = document.querySelectorAll('.slider');
