--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
          </div>
       </section>
 
-       <div> </div>
+       <div style="height: 20px;"> </div>
       
       <script>
          document.addEventListener('DOMContentLoaded', () => {
