--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
         body {
             font-family: 'Helvetica', sans-serif;
-            color: #333;
-            background-color: #fff;
+            color: #f0f0f0;
+            background-color: #333333;
             line-height: 1.8;
 
             /* Permette lo scroll ma nasconde la scrollbar */
