--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         body {
             font-family: 'Helvetica', sans-serif;
             color: #f0f0f0;
-            background-color: #333333;
+            background-color: #0E0F0E;
             line-height: 1.8;
 
             /* Permette lo scroll ma nasconde la scrollbar */
@@ -70,7 +70,7 @@
          margin-bottom: 0;
          }
          .divider {
-         border-top: 2px solid #000;
+         border-top: 2px solid #f0f0f0;
          margin: 0;
          }
          .three-columns {
