--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         }
 
         body {
+            link: #935EEE;
             font-family: 'Helvetica', sans-serif;
             color: #f0f0f0;
             background-color: #0E0F0E;
