--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             link: #935EEE;
             font-family: 'Helvetica', sans-serif;
             color: #f0f0f0;
-            background-color: #0E0F0E;
+            background-color: #1A1A1A;
             line-height: 1.8;
 
             /* Permette lo scroll ma nasconde la scrollbar */
