--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
             box-sizing: border-box;
         }
 
+        a { color: #935EEE; }
+
+         
         body {
-            link: #935EEE;
+           
             font-family: 'Helvetica', sans-serif;
             color: #f0f0f0;
             background-color: #1A1A1A;
