--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         body {
            
             font-family: 'Helvetica', sans-serif;
-            color: #f0f0f0;
+            color: #000000;
             background-color: #1A1A1A;
             line-height: 1.8;
 
