--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         body {
            
             font-family: 'Helvetica', sans-serif;
-            color: #000000;
+            color: #ffffff;
             background-color: #1A1A1A;
             line-height: 2;
 
@@ -73,7 +73,7 @@
          margin-bottom: 0;
          }
          .divider {
-         border-top: 2px solid #f0f0f0;
+         border-top: 1.5px solid #f0f0f0;
          margin: 0;
          }
          .three-columns {
