--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
          
         body {
            
-            font-family: 'Helvetica', sans-serif;
+            font-family: 'Arial', sans-serif;
             color: #ffffff;
             background-color: #1A1A1A;
             line-height: 2;
