--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <style>
 
         html {
-            font-size: 16px; /* Imposta la dimensione di base del font */
+            font-size: 18px; /* Imposta la dimensione di base del font */
+            line-height: 1;
         }
 
         * {
