--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <style>
 
         html {
-            font-size: 18px; /* Imposta la dimensione di base del font */
-            line-height: 1;
+            font-size: 14px; /* Imposta la dimensione di base del font */
+            line-height: 20px;
         }
 
         * {
