--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
             overflow: auto; /* Permette lo scroll */
             scrollbar-width: none; /* Nasconde la scrollbar in Firefox */
             -ms-overflow-style: none; /* Nasconde la scrollbar in IE e Edge */
+
+
+            /* Font smoothing */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-smooth: always;
+
+
+           
         }
 
         /* Nasconde la scrollbar in Chrome e Safari */
