--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div> Amaro Màrlus </div>
             <div> 
                Revamped branding for an emerging amaro producer in the Turin area. 
-               A classic touch with colors reflecting the spirit of the drink, and a typeface inspired by vintage local bottles. 
+               A classic touch with colors reflecting the spirit of the drink, and a custom typeface inspired by vintage local bottles. 
             </div>
             <div> 2023 </div>
          </div>
@@ -204,7 +204,7 @@
       <section class="section">
          <div class="three-columns">
             <div> Sidewalk - Art Gallery </div>
-            <div> Branding project from scratch. A physical and digital art gallery in the Milan area. Showcasing street artists who haven’t yet made their mark online. </div>
+            <div> Branding project from scratch. A physical and digital art gallery in the Milan area, showcasing street artists who haven’t yet made their mark online. </div>
             <div> 2024 </div>
          </div>
          <div class="image-text-container">
@@ -242,7 +242,7 @@
          <div class="three-columns">
             <div> Officine Vica </div>
             <div> 
-               Design for the presentation app and event stand for a Turin-based brand specializing in tractors and agricultural machinery. 
+               Design for the presentation app and event stand for a Turin-based brand specializing in agricultural machinery. 
                The project included creating an engaging user interface and a visually impactful space for large-scale technology events. 
             </div>
             <div> 2023 - Team: Nello Russo, Claudio Giacosa, Andrea Giorcelli</div>
@@ -287,7 +287,7 @@
          <div class="three-columns">
             <div> Ford </div>
             <div> 
-               Ad page design and copywriting for Ford’s new hybrid machines, featuring instructional content. 
+               Ad page design and copywriting for Ford’s new hybrid cars, featuring instructional content. 
             </div>
             <div> 2023 - Team: Nello Russo</div>
          </div>
@@ -390,7 +390,7 @@
             <div> 
                The search for my creative identity led me to illustration, where I embraced a raw, simple, and spontaneous style. 
                Collaborating with Milanese photographer Emanuele Ferrari, who’s worked with Vogue and Elle, also allowed me to dive 
-               deeper into the emotions and nuances that shape the creative process. 
+               deeper into the nuances of the creative process. 
             </div>
             <div> 2020-2022 </div>
          </div>
@@ -421,7 +421,7 @@
          <div class="three-columns">
             <div> Guruamiami </div>
             <div> 
-               Creative direction in digital communication and branding for a handmade crochet brand. 
+               Creative direction and branding for a handmade crochet brand. 
                A playful venture that grew into a business with notable partnerships,
                including The Woobles™, the global leader in the beginners crochet market. 
             </div>
